# RustForgeOS

./: .gitignore  ARCHITECTURE.md  BANNER.txt  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  INDEX.md  LICENSE  Makefile  PHASE_1_COMPLETE.md  PROJECT_SUMMARY.md  PROJECT_TREE.txt  QUICK_REFERENCE.md  README.md  ROADMAP.md  SYSTEM_DIAGRAM.txt
.cargo/: config.toml
.github/workflows/: rust.yml
allocator/: Cargo.toml
allocator/src/: buddy.rs  lib.rs  linked_list.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs  sync.rs  types.rs
db/: Cargo.toml
db/src/: btree.rs  lib.rs  query.rs  storage.rs  transaction.rs  wal.rs
distributed/: Cargo.toml
distributed/src/: kv.rs  lib.rs  node.rs  raft.rs
examples/: array.forge  fibonacci.forge  hello.forge
kernel/: Cargo.toml
kernel/src/: gdt.rs  interrupts.rs  main.rs  memory.rs  scheduler.rs  serial.rs  vga.rs
lang/: Cargo.toml
lang/src/: ast.rs  bytecode.rs  compiler.rs  lexer.rs  lib.rs  parser.rs  vm.rs
monitor/: Cargo.toml
monitor/src/: anomaly.rs  lib.rs  sniffer.rs
net/: Cargo.toml
net/src/: arp.rs  dns.rs  ethernet.rs  http.rs  ip.rs  lib.rs  socket.rs  tcp.rs  udp.rs
runtime/: Cargo.toml
runtime/src/: executor.rs  future.rs  lib.rs  task.rs  thread_pool.rs  waker.rs
sandbox/: Cargo.toml
sandbox/src/: capability.rs  isolation.rs  lib.rs  syscall.rs
scripts/: setup.sh  test-all.sh
shell/: Cargo.toml
shell/src/: main.rs
wasm/: Cargo.toml
wasm/src/: executor.rs  lib.rs  module.rs  parser.rs
