[workspace]
resolver = "2"
members = [
    "kernel",
    "allocator",
    "lang",
    "net",
    "db",
    "sandbox",
    "distributed",
    "runtime",
    "wasm",
    "monitor",
    "shell",
    "common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RustForge Team"]

[workspace.dependencies]
# Shared dependencies across workspace
spin = "0.9"
bitflags = "2.4"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = "1.3"
crossbeam-utils = { version = "0.8", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
opt-level = 3
