[package]
name = "kernel"
version.workspace = true
edition.workspace = true

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
x86_64 = "0.14"
uart_16550 = "0.3"
spin = { workspace = true }
lazy_static = { workspace = true }
bitflags = { workspace = true }
pic8259 = "0.11"
pc-keyboard = "0.7"
common = { path = "../common" }
allocator = { path = "../allocator" }

[dependencies.volatile]
version = "0.4"
features = ["unstable"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
